# KLARNET

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
config/: app.toml  entities.yaml  klarnet.toml  patterns.yaml
crates/actions/: Cargo.toml
crates/actions/src/: custom.rs  lib.rs  smart_home.rs  system.rs  web.rs
crates/api/src/: grpc.rs  handlers.rs  lib.rs  websocket.rs
crates/audio_ingest/: Cargo.toml
crates/audio_ingest/src/: lib.rs  processor.rs  source.rs
crates/buffering/src/: adaptive.rs  lib.rs  ring_buffer.rs  segment_manager.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  events.rs  lib.rs  result.rs
crates/llm_connector/: Cargo.toml
crates/llm_connector/src/: cache.rs  deepseek.rs  lib.rs  openrouter.rs  prompt_builder.rs
crates/nlu/: Cargo.toml
crates/nlu/src/: hybrid.rs  lib.rs  llm.rs  patterns.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  metrics.rs
crates/tts/: Cargo.toml
crates/tts/src/: lib.rs  piper.rs  player.rs  silero.rs
crates/tts/tests/: tts_integration.rs
crates/vad/: Cargo.toml
crates/vad/src/: energy.rs  hybrid.rs  lib.rs  webrtc.rs
crates/whisper_stt/: Cargo.toml
crates/whisper_stt/src/: lib.rs  processor.rs  streaming.rs
deploy/: docker-compose.yaml  prometheus.yml
scripts/: install.sh  silero_tts.py  test_silero_tts.py  whisper_server.py
src/: app.rs  commands.rs  lib.rs  main.rs  pipeline.rs
tests/: e2e_test.ps1  integration_test.rs  perf_test.rs  pipeline_integration.rs  tts_engine_speak.rs
