[workspace]
members = [
    "crates/audio_ingest",
    "crates/vad",
    "crates/buffering",
    "crates/whisper_stt",
    "crates/nlu",
    "crates/llm_connector",
    "crates/actions",
    "crates/tts",
    "crates/api",
    "crates/observability",
    "crates/config",
    "crates/core",
    "crates/klarnet",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KLARNET Team"]
license = "MIT"
repository = "https://github.com/yourusername/klarnet"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.16"
ringbuf = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP/API
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Metrics
prometheus = "0.13"
opentelemetry = "0.26"
opentelemetry-prometheus = "0.20"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
parking_lot = "0.12"
bytes = "1.7"
futures = "0.3"
pin-project = "1.1"

# Configuration
config = "0.14"
notify = "6.1"

# Testing
mockall = "0.13"
proptest = "1.5"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
tonic-build = "0.14.2"
chrono = "0.4.42"