[workspace]
members = [
    "crates/core",
    "crates/audio_ingest",
    "crates/vad",
    "crates/whisper_stt",
    "crates/nlu",
    "crates/actions",
    "crates/tts",
    "crates/observability",

]
resolver = "2"

[package]
name = "klarnet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[features]
default = []
grpc = []


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KLARNET Team"]
license = "MIT"
repository = "https://github.com/yourusername/klarnet"

[workspace.dependencies]

tokio = { version = "1.40", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
klarnet-core = { path = "crates/core" }
audio_ingest = { path = "crates/audio_ingest", default-features = false }
vad = { path = "crates/vad" }
whisper_stt = { path = "crates/whisper_stt" }
nlu = { path = "crates/nlu" }
actions = { path = "crates/actions" }
llm-connector = { path = "crates/llm_connector" }
tts = { path = "crates/tts" }

[build-dependencies]
chrono.workspace = true
tonic-build = "0.12"
