[package]
name = "llm-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
klarnet-core = { path = "../core" }
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time"] }
tracing.workspace = true