[package]
name = "tts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
hardware-audio = ["cpal"]

[dependencies]
klarnet-core = { path = "../core" }
async-trait = "0.1"
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
cpal = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3.10"