
[package]
name = "whisper_stt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
klarnet-core = { path = "../core" }
serde.workspace = true
uuid.workspace = true
tokio.workspace = true
serde_json.workspace = true
async-trait = "0.1"

[dev-dependencies]
chrono.workspace = true